--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Configure the Build System
         run: |
           cmake --preset default
+          tree
 
       - name: Build the Project
         run: |
