--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,10 @@ on:
 
 jobs:
   build-test:
-    runs-on: self-ubuntu-24.04
+    strategy:
+      matrix:
+        runs-on: [self-ubuntu-24.04, karolina]
+    runs-on: ${{ matrix.runs-on }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
