--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
     strategy:
       matrix:
         runs-on: [self-ubuntu-24.04, karolina]
+        nps: [1,2,4]
     runs-on: ${{ matrix.runs-on }}
     steps:
       - name: Checkout Repository
@@ -19,17 +20,30 @@ jobs:
 
       - name: Configure the Build System
         run: |
+          if [ "${{ matrix.runs-on }}" == "karolina" ]; then
+            module load Boost/1.83.0-GCC-13.2.0 Ninja/1.12.1-GCCcore-13.3.0 OpenMPI/4.1.6-GCC-13.2.0
+          fi
           cmake --preset default
           tree
 
       - name: Build the Project
         run: |
+          if [ "${{ matrix.runs-on }}" == "karolina" ]; then
+            module load Boost/1.83.0-GCC-13.2.0 Ninja/1.12.1-GCCcore-13.3.0 OpenMPI/4.1.6-GCC-13.2.0
+          fi
           cmake --build --preset default
+          #mpirun -np ${{ matrix.nps }} build/default/myapp/myapp
 
       - name: Run Tests
         run: |
+          if [ "${{ matrix.runs-on }}" == "karolina" ]; then
+            module load Boost/1.83.0-GCC-13.2.0 OpenMPI/4.1.6-GCC-13.2.0
+          fi
           ctest --preset default
 
       - name: Package the Application
         run: |
+          if [ "${{ matrix.runs-on }}" == "karolina" ]; then
+            module load Boost/1.83.0-GCC-13.2.0 Ninja/1.12.1-GCCcore-13.3.0 OpenMPI/4.1.6-GCC-13.2.0
+          fi
           cmake --build --preset default -t package
