Add Upload tarball

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         runs-on: [self-ubuntu-24.04, karolina]
-        nps: [1,2,4]
+        #nps: [1,2,4]
     runs-on: ${{ matrix.runs-on }}
     steps:
       - name: Checkout Repository
@@ -44,6 +44,15 @@ jobs:
       - name: Package the Application
         run: |
           if [ "${{ matrix.runs-on }}" == "karolina" ]; then
-            module load Boost/1.83.0-GCC-13.2.0 Ninja/1.12.1-GCCcore-13.3.0 OpenMPI/4.1.6-GCC-13.2.0
+            module load Boost/1.83.0-GCC-13.2.0 OpenMPI/4.1.6-GCC-13.2.0
           fi
           cmake --build --preset default -t package
+
+      - name: Upload tarball                  
+        uses: actions/upload-artifact@v4
+        with:
+          name: archive-${{ matrix.runs-on }}
+          path: |
+            build/default/*.tar.gz
+            LICENSE
+            README.adoc
