--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,11 @@ name: CI - Configure, Build, Test
 on:
   push:
     branches: [ main ]
+    tags:
+    - 'v*'
   pull_request:
     branches: [ main ]
+  
   workflow_dispatch:
 
 jobs:
@@ -67,6 +70,19 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      -
+        name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: |
+            ghcr.io/${{ github.repository }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -75,9 +91,10 @@ jobs:
           password: ${{ secrets.GHCR_PAT }}
 
       - name: Build and Push Docker Image
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: Dockerfile
-          push: true
-          tags: ghcr.io/${{ github.repository }}:v1
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
